2025-05-02T12:40:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14795386314 # 952
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
* notice: last 14d: unq all: 29 74
* notice: prev accum: outdated-unq outdated-all / unq all: 4113 8767 / 4163 8841
* notice: next accum: outdated-unq outdated-all / unq all: 4114 8768 / 4164 8842
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-18] / [2025-05-02]

2025-05-02T01:44:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14787003414 # 951
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
* notice: last 14d: unq all: 29 74
* notice: prev accum: outdated-unq outdated-all / unq all: 4113 8767 / 4163 8840
* notice: next accum: outdated-unq outdated-all / unq all: 4113 8767 / 4163 8841
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-05-01]

2025-05-01T12:40:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14775512069 # 950
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-01
* notice: last 14d: unq all: 29 73
* notice: prev accum: outdated-unq outdated-all / unq all: 4112 8765 / 4162 8839
* notice: next accum: outdated-unq outdated-all / unq all: 4113 8767 / 4163 8840
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-17] / [2025-05-01]

2025-05-01T01:52:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14768035914 # 949