@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-20T01:47:25Z",
-  "count" : 2,
+  "timestamp" : "2025-05-03T12:38:12Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
