@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-05-02T12:40:49Z",
+  "timestamp" : "2025-05-03T12:38:12Z",
   "count_outdated" : 8768,
   "uniques_outdated" : 4114,
-  "count" : 8842,
-  "uniques" : 4164,
+  "count" : 8844,
+  "uniques" : 4166,
   "clones" : [
     {
       "timestamp": "2025-04-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-04-20T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
