@@ -1,11 +1,11 @@
 {
-  "count": 74,
-  "uniques": 29,
+  "count": 75,
+  "uniques": 30,
   "clones": [
     {
       "timestamp": "2025-04-19T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-04-20T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-05-02T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
