@@ -1,3 +1,12 @@
+2025-05-03T12:38:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14810936247 # 954
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-03
+* notice: last 14d: unq all: 30 75
+* notice: prev accum: outdated-unq outdated-all / unq all: 4114 8768 / 4164 8842
+* notice: next accum: outdated-unq outdated-all / unq all: 4114 8768 / 4166 8844
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-04-19 2025-05-03]
+
 2025-05-02T12:40:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14795386314 # 952
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
